# dogs

./: data.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_parent.py  0003_dog_owner.py
dogs/templates/dogs/: base.html  categories.html  dog_form.html  dog_list.html  dogs.html
dogs/templatetags/: my_tags.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
