[tool.poetry]
name = "dogs"
version = "0.1.0"
description = ""
authors = ["DSulzhits <dsulzhits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
ipython = "^8.14.0"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
